--- a/style/style.css
+++ b/style/style.css
@@ -2,8 +2,8 @@
    background-color: black;
    color: white; 
    padding: 0%;
-   margin: 0%;
    font-family: Arial, Helvetica, sans-serif;
+   margin: 0%;
 }
 
 section {
@@ -169,4 +169,70 @@ h6 {
     border-color: darkviolet;
     margin-top: 2.5rem;
     padding: 12 50;
+}
+
+.home_2 {
+    background-color: ghostwhite;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+}
+.home_2 h3{
+    background-color: ghostwhite;
+    color: black;
+    font-size: 40px;
+    margin-bottom: 2rem;
+
+} 
+.home_2 footer{
+    width: 2rem;
+    height: 250px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 20rem;
+}
+.home_2 footer div{
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+}
+
+.home_2 footer .divider{
+    background-color: white;
+    height: 120px;
+    width: 1px;
+}
+.home_2 .container_btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: ghostwhite;
+
+}
+.home_2 div{
+    background-color: ghostwhite;
+}
+.home_2 .readme{
+    background-color:white;
+    text-align: center;
+}
+.home_2 h4{
+    background-color: white;
+    color:black;
+}
+.home_2 p{
+    background-color: white;
+    color: black;
+}
+.home_2 .readme input {
+    border-radius: 5rem;
+    background-color: white;
+    color: black;
+    border-color: darkviolet;
+    margin-right: 2rem;
+    margin-top: 2.5rem;
+    padding: 12 40;
 }
