--- a/style/style.css
+++ b/style/style.css
@@ -170,3 +170,109 @@ h6 {
     margin-top: 2.5rem;
     padding: 12 50;
 }
+
+.home_2 {
+    background-color: ghostwhite;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+
+}
+
+.home_2 h3{
+    background-color: ghostwhite;
+    color: black;
+    font-size: 45px;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    margin-left: 2rem;
+
+} 
+
+.home_2 .index{
+    width: 2rem;
+    margin-top: 17rem;
+    height: 250px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.home_2 .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.home_2 footer div{
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+}
+
+.home_2 footer .divider{
+    background-color: white;
+    height: 120px;
+    width: 1px;
+}
+
+.home_2 .container_btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: ghostwhite;
+
+}
+
+.home_2 div{
+    background-color: ghostwhite;
+}
+
+.home_2 .readme{
+    background-color:white;
+    text-align: center;
+    width: 20rem;
+    margin-bottom: 5rem;
+}
+
+.home_2 div .img{
+    height: 13rem;
+    background-color: white;
+}
+
+.home_2 h4{
+    background-color: white;
+    color:black;
+}
+
+.home_2 p{
+    background-color: white;
+    color: black;
+    font-size: 14;
+    font-weight: 500;
+    margin: 0;
+}
+
+.home_2 .readme input {
+    border-radius: 5rem;
+    background-color: white;
+    color: black;
+    border-color: darkviolet;
+    margin-top: 2rem;
+    padding: 8 55;
+    font-size: 15;
+    margin-bottom: 3rem;
+}
+.home_2 footer{
+    margin-left: 2rem;
+    background-color: ghostwhite;
+    color: black;
+}
+
+.home_2 footer div{
+    color: black;
+}
+
+.home_2 footer .divider{
+    background-color: black;
+}
