--- a/style/style.css
+++ b/style/style.css
@@ -374,3 +374,79 @@ h6 {
     height: 120px;
     width: 1px;
 }
+
+.footer{
+    background-color: ghostwhite;
+    height: 100px;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2rem 10%;
+    height: 200px;
+}
+
+.footer .container_1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25%;
+}
+
+.footer .container_1 .logo{
+    height: 100px;
+    text-align: center;
+}
+
+footer .container_1 .subtitle{
+    color: black;
+    text-align: center;
+}
+
+.footer .container_2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 65%;
+}
+
+.footer div{
+    background-color: ghostwhite;
+    color: black;
+}
+.footer h6{
+    font-weight: 700;
+    background-color: ghostwhite;
+}
+.footer h3{
+    background-color: ghostwhite;
+}
+.footer span{
+    background-color: ghostwhite;
+    color: black;
+    font-weight: 900;
+}
+.footer .titulo{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-weight: 900;
+}
+.footer .redes-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footer .redes-footer div{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.footer .redes-footer a{
+    font-weight: 700;
+    border-bottom: 2px solid black;
+    cursor: pointer;
+}
