--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,12 @@
 * {
-   background-color: black;
-   color: white; 
-   padding: 0%;
-   margin: 0%;
+   padding: 0;
+   margin: 0;
    font-family: Arial, Helvetica, sans-serif;
+   box-sizing: border-box;
+}
+body{
+    background-color: black;
+    color: white; 
 }
 
 section {
@@ -45,7 +48,6 @@ nav {
 }
 
 .redes a{
-    background-color: white;
     color: black;
 }
 
@@ -203,6 +205,7 @@ h6 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
 }
 
 .home_2 footer div{
@@ -237,6 +240,7 @@ h6 {
 }
 
 .home_2 div .img{
+
     height: 13rem;
     background-color: white;
 }
@@ -382,7 +386,6 @@ h6 {
     flex-direction: row;
     justify-content: space-around;
     padding: 2rem 10%;
-    height: 400px;
     flex-wrap: wrap;
 }
 
@@ -473,6 +476,7 @@ h6 {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+    align-items: center;
 }
 
 .footer .redes-footer div{
