--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,11 @@ section {
     height: 100vh;
 }
 
+.home_0{
+    height: 6rem;
+    width: 100%;
+}
+
 .home_1 {
     padding: 0 3rem;
     display: flex;
@@ -29,6 +34,7 @@ section {
     justify-content: space-between;
     margin-top: 25%;
 }
+
 .home_1 footer div{
     writing-mode: vertical-rl;
     text-orientation: mixed;
@@ -42,12 +48,22 @@ section {
 }
 
 .home_1 .imagen{
-    width: 82rem;
+    width: 50%;
+}
+
+.home_1 .imagen img{
+    width: 100%;
+    margin-top: 5rem;
+}
+
+.home_1 .imagen .man{
+    width: 100%;
+    height: 80%;
 }
 
 .home_1 .container h1{
     font-weight: 500;
-    font-size: 6rem;
+    font-size: 5.5rem;
 }
 
 .home_1 .container{
@@ -68,19 +84,19 @@ section {
     border-radius: 5rem;
     background-color: white;
     color: darkviolet;
-    border-color: darkviolet;
+    border: 1px solid darkviolet;
     margin-right: 2rem;
     margin-top: 2.5rem;
-    padding: 15 50;
+    padding: 0.8rem 3.5rem;
 }
 
 #btn_2 {
     border-radius: 5rem;
     background-color: black;
     color: white;
-    border-color: darkviolet;
+    border: 1px solid darkviolet;
     margin-top: 2.5rem;
-    padding: 15 90;
+    padding: 0.8rem 4.5rem;
 }
 
 .home_2 {
@@ -283,123 +299,4 @@ section {
     background-color:white;
     height: 120px;
     width: 1px;
-}
-
-.footer{
-    background-color: #f6f6f6;
-    color: black;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 2rem 10%;
-    flex-wrap: wrap;
-}
-
-.footer .container_1{
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-
-}
-
-.footer .container_1 .logo{
-    height: 100px;
-}
-
-.footer .container_1 .subtitle{
-    color: black;
-    text-align: left;
-    margin-bottom: 2rem;
-
-
-}
-.footer .container_1 .text-footer{
-    font-size: 2.5rem;
-
-}
-.footer .container_2{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 75%;
-}
-.footer .container_2 .formulario{
-    display:flex;
-    justify-content: space-around;
-    background-color: #f6f6f6;
-    padding: 2rem;
-    margin-top:2.5rem;
-}
-.footer .input_container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 35%;
-}
-.footer .input_container input{
-    background-color: #F6F6F6;
-    height: 3rem;
-    border-radius: 2rem;
-    width: 100%;
-    padding: 0.5rem 2rem;
-}
-.footer .input_container input:first-of-type{
-    margin-bottom: 1rem;
-}
-.footer .formulario textarea{
-    background-color: #f6f6f6;
-    border-radius: 2rem;
-    width:60%;
-    padding: 0.5rem 2rem;
-    height:100%;
-    resize: none;
-    
-}
-.footer div{
-    background-color: #f6f6f6;
-    color: black;
-}
-.footer h6{
-    font-weight: 700;
-    background-color: #f6f6f6;
-}
-.footer h3{
-    background-color: #f6f6f6;
-}
-.footer span{
-    background-color: #f6f6f6;
-    color: black;
-    font-weight: 900;
-}
-.footer .titulo{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    font-weight: 900;
-}
-.footer .redes-footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-}
-
-.footer .redes-footer div{
-    width: 20%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.footer .redes-footer .redes{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 60%;
-}
-.footer .redes-footer .redes a{
-    color: #4538DA;
-    font-weight: 700;
-    border-bottom: 2px solid #4538DA;
-    cursor: pointer;
 }
