--- a/style/style.css
+++ b/style/style.css
@@ -5,12 +5,12 @@
 }
 @font-face {
   font-family: "Grotesk";
-  src: url("../fonts/NHaasGroteskTXPro-65Rg.ttf");
+  src: url("../fonts/NHaasGroteskTXPro-65Md.ttf");
   font-weight: 600;
 }
 @font-face {
   font-family: "Grotesk";
-  src: url("../fonts/NHaasGroteskTXPro-75Rg.ttf");
+  src: url("../fonts/NHaasGroteskTXPro-75Bd.ttf");
   font-weight: 700;
 }
 * {
@@ -156,6 +156,7 @@ section {
   flex-direction: row;
   justify-content: space-between;
   color: #f6f6f6;
+  font-family: 'Grotesk';
 }
 
 .home_2 div {
@@ -184,6 +185,7 @@ section {
   color: black;
   padding: 1rem;
   font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .home_2 p {
