--- a/style/nav.css
+++ b/style/nav.css
@@ -1,3 +1,8 @@
+.home_0{
+    height: 6rem;
+    width: 100%;
+}
+
 header{
     position: fixed;
     width: 100%;
@@ -18,6 +23,10 @@ header .redes_container {
     align-items: center;
     padding-right: 5rem;
     padding-left: 5rem;
+}
+
+header .redes_container img {
+    margin-left: 1.6rem;
 }
 
 header .redes_container div{
