solucion desorden de Home e indices superpuestos al nav

--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 body {
   background-color: black;
   color: white;
@@ -34,10 +35,14 @@ section {
 }
 
 .home_1 {
-
+  padding: 0 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .home_1 footer {
+  z-index: 0;
   width: 2rem;
   height: 250px;
   align-items: center;
@@ -92,6 +97,7 @@ section {
   display: inline-block;
 }
 .home_2 {
+  padding: 0 5%;
   background-color: #f6f6f6;
   display: flex;
   justify-content: flex-start;
@@ -118,6 +124,7 @@ section {
 }
 
 .home_2 .index {
+  z-index: 0;
   width: 2rem;
   margin-top: 25%;
   height: 250px;
@@ -191,9 +198,6 @@ section {
   font-size: 14;
   font-weight: 500;
   margin: 0;
-}
-
-
 }
 
 .home_2 footer div {
