--- a/style/title.css
+++ b/style/title.css
@@ -1,23 +1,25 @@
 * {
-    background-color: black;
-    color: white; 
     padding: 0%;
     margin: 0%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 section {
-    height: 100vh;
     max-width: 100%;
     display: none;
 }
 
+.home_0{
+    height: 6rem;
+    width: 100%;
+}
+
 .approach_1 {
-    max-height: 100vh;
+    color: white;
+    background-color: black;
     display: flex;
     justify-content: space-around;
-    padding: 0 15%;
-    padding-top: 5%;
+    padding: 5% 10%;
 }
 
 .approach_1 .title{
