hicimos el componente paso en handlebars

--- a/templates/paso.handlebars
+++ b/templates/paso.handlebars
@@ -1,18 +1,16 @@
 <div class="paso">
-    <header>
+      <div class="header">
         <div class="number">
-            02
+          {{{number}}}
         </div>
         <div class="text">
-            <span class="titulo">Encuentra el problema</span>
-            <p>¿Qué problema se resuelve primero? No importa.
-                Con tiempo y energía, se arregla el que más repercusión tenga
-                en el balance final.</p>
+          <div class="titulo">{{{titulo}}}</div>
+          <p>
+            {{{description}}}
+          </p>
         </div>
-    </header>
-    <div class="lista">
-        <div>Marketing Research</div>
-        <div>Escucha a tu Equipo</div>
-        <div>Analizar el Problema</div>
+      </div>
+      <div class="lista">
+        {{{pasos}}}
+      </div>
     </div>
-</div>
