--- a/style/enfoque.css
+++ b/style/enfoque.css
@@ -5,7 +5,7 @@
   background: #000000;
   padding:0 5%;
 }
-header {
+.header {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid #ffffff;
@@ -20,7 +20,7 @@ header {
   justify-content: center;
   line-height: 1;
 }
-.paso header .text .titulo {
+.paso .header .text .titulo {
   margin-bottom: 2rem;
   font-weight: 500;
   letter-spacing: 2px;
