--- a/style/person.css
+++ b/style/person.css
@@ -1,30 +1,11 @@
-@font-face {
-    font-family: "Grotesk";
-    src: url("../fonts/NHaasGroteskTXPro-55Rg.ttf");
-    font-weight: 400;
-}
-
-@font-face {
-    font-family: "Grotesk";
-    src: url("../fonts/NHaasGroteskTXPro-65Md.ttf");
-    font-weight: 600;
-}
-
-@font-face {
-    font-family: "Grotesk";
-    src: url("../fonts/NHaasGroteskTXPro-75Bd.ttf");
-    font-weight: 700;
-}
-
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Grotesk";
 }
 
 .personContainer {
-    background-color: black;
+    background-color: transparent;
     color: white;
     padding: 1rem;
     display: flex;
@@ -38,6 +19,7 @@
     border-radius: 5% 0 5% 0;
     width: 15rem;
     height: 20rem;
+    filter: grayscale(1);
 }
 
 .personContainer .text {
