--- a/style/cases.css
+++ b/style/cases.css
@@ -1,6 +1,91 @@
 body {
     background-color: black;
     color: white;
+    margin: 0%;
+    padding: 0%;
+}
+
+.containerFlow {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 0 5%;
+    background-color: #f6f6f6;
+}
+
+.containerFlow h1 {
+    background-color: #f6f6f6;
+    color: black;
+    font-size: 50px;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+    margin-left: 2rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.containerFlow h2 {
+    background-color: #f6f6f6;
+    color: black;
+    font-size: 30px;
+    margin-bottom: 2rem;
+    margin-left: 2rem;
+    font-weight: 100;
+    text-align: center;
+}
+
+.containerFlow h4 {
+    background-color: white;
+    color: black;
+    padding: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+  
+.containerFlow p {
+    background-color: white;
+    color: black;
+    font-size: 14;
+    font-weight: 300;
+    margin: 0;
+}
+
+.containerFlow .container_btn {
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #f6f6f6;
+    font-family: 'Grotesk';
+}
+
+.containerFlow div {
+    background-color: #f6f6f6;
+}
+
+.containerFlow div .img {
+    height: 13rem;
+    background-color: white;
+}
+
+.containerFlow .container .container_btn .readme .img p{
+    background-color: #ffffff;
+    font-weight: 300;
+}
+
+.containerFlow .readme {
+    min-height: 25rem;
+    background-color: white;
+    text-align: center;
+    width: 20rem;
+    margin-bottom: 5rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 }
 
 .container {
