--- a/style/nav.css
+++ b/style/nav.css
@@ -108,7 +108,8 @@ header .redes_container .redes select::-ms-expand {
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 20;
+    font-weight: 300;
+    font-size: 1.2rem;
 }
 
 .bold {
