--- a/style/footer.css
+++ b/style/footer.css
@@ -50,6 +50,7 @@
     width: 35%;
 }
 .footer .input_container input{
+    outline: none;
     background-color: #F6F6F6;
     height: 3rem;
     border-radius: 2rem;
@@ -61,6 +62,7 @@
     margin-bottom: 1rem;
 }
 .footer .formulario textarea{
+    outline: none;
     background-color: #f6f6f6;
     border-radius: 2rem;
     width:60%;
