--- a/style/person.css
+++ b/style/person.css
@@ -13,6 +13,8 @@
     flex-direction: column;
     width: 20rem;
     height: 38rem;
+    padding: 5% 0;
+    margin-bottom: 3rem;
 }
 
 .personContainer .img {
