--- a/style/enfoque.css
+++ b/style/enfoque.css
@@ -1,10 +1,22 @@
+body {
+  background-color: black;
+}
+
+.pasos {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10rem;
+}
+
 .paso {
-  font-family: "Grotesk";
   color: #ffffff;
   font-size: 1.5rem;
   background: #000000;
-  padding:0 5%;
+  padding:0 10%;
+  margin-bottom: 7rem;
 }
+
 .header {
   display: flex;
   flex-direction: row;
@@ -20,20 +32,26 @@
   justify-content: center;
   line-height: 1;
 }
-.paso .header .text .titulo {
-  margin-bottom: 2rem;
-  font-weight: 500;
-  letter-spacing: 2px;
-}
 
 .paso .text {
   padding-left: 5rem;
   padding-top: 2rem;
   line-height: 2rem;
   font-weight: 400;
-  letter-spacing: 1px;
   margin-bottom: 2rem;
 }
+
+.paso .text p {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.paso .header .text .titulo {
+  margin-bottom: 2rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+
 .paso .lista div{
     padding: 2rem 0;
     border-bottom: 1px solid #ffffff;
