--- a/style/nav.css
+++ b/style/nav.css
@@ -122,3 +122,13 @@ h6 {
     width: 250px;
     font-weight: 900;
 }
+
+@media screen and (max-width: 1150px) {
+    header {
+        display: none;
+    }
+
+    .home_0 {
+        display: none;
+    }
+}
