--- a/style/title.css
+++ b/style/title.css
@@ -18,13 +18,12 @@ section {
     color: white;
     background-color: black;
     display: flex;
-    justify-content: space-around;
     padding: 5% 10%;
 }
 
 .approach_1 .title{
     font-size: 4rem;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .approach_1 .title p{
@@ -47,7 +46,20 @@ section {
 }
 
 .approach_1 article{
+    max-width: 60%;
+    font-size: 1.1rem;
     line-height: 2rem;
     font-weight: 400;
     padding-top: 6rem;
+}
+
+@media screen and (max-width: 765px) {
+    .approach_1 {
+        flex-direction: column;
+    }
+
+    .approach_1 article{
+        max-width: 100%;
+        padding-bottom: 3rem;
+    }
 }
