responsive team landing

--- a/style/enfoque.css
+++ b/style/enfoque.css
@@ -56,3 +56,18 @@ body {
     padding: 2rem 0;
     border-bottom: 1px solid #ffffff;
 }
+
+@media screen and (max-width: 800px) {
+  .header {
+    flex-direction: column;
+  }
+
+  .paso .number {
+    margin: 0 auto;
+  } 
+  
+  .paso .text {
+    padding-left: 0;
+    text-align: center;
+  }
+}
