--- a/style/mission.css
+++ b/style/mission.css
@@ -104,6 +104,8 @@
         font-size: 1.2rem;
         font-weight: 300;
         border: none;
+        margin-bottom: 0;
+        margin-top: 0.4rem;
     }
 
     .mission_2 .container img {
