--- a/style/mission.css
+++ b/style/mission.css
@@ -1,3 +1,7 @@
+.navRes {
+    display: none;
+}
+
 .mission_2 {
     background-color: #F6F6F6;
     display: flex;
@@ -71,6 +75,12 @@
 @media screen and (max-width: 1210px) {
     .mission_2 .container .text { 
         margin-right: 1rem;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .navResp{ 
+        display: block;
     }
 }
 
