--- a/style/team.css
+++ b/style/team.css
@@ -3,6 +3,10 @@ body{
     color: white;
 }
 
+.navRes {
+    display: none;
+}
+
 .background img {
     width: 100%;
 }
@@ -50,6 +54,12 @@ body{
     display: flex;
     flex-direction: row-reverse;
     padding: 5% 10%;
+}
+
+@media screen and (max-width: 1150px) {
+    .navRes {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 765px) {
