home mobile final

--- a/style/style.css
+++ b/style/style.css
@@ -282,6 +282,29 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+  .home_1 {
+    flex-direction: column-reverse;
+    padding-left: 5%;
+    padding-right: 0;
+  }
+  
+  .home_1 .imagen {
+    display: block;
+    width: auto;
+  }
+  
+  .home_1 .imagen img{
+    margin-top: 0;
+  }
+  
+  .home_1 .container {
+    margin-bottom: 5rem;
+  }
+
+  .home_1 .container .title .responsive {
+    text-align: left;
+  }
+
   .home_1 .container .title .responsive span {
     font-size: 3rem;
     margin: 0 auto;
