wwc-20: extraccion templates hb

--- a/templates/nav.handlebars
+++ b/templates/nav.handlebars
@@ -13,10 +13,10 @@
         <div class="main_container">
             <h6 class="subtitle">W - World<span class="bold">Consulting.</span></h6>
             <nav class="main_nav" id="main_nav">
-                <a class="home" id="home">Home</a>
-                <a class="mision" id="mision">Mision</a>
-                <a class="approach" id="approach">Approach
-                    <a class="team" id="team">Team</a>
-                    <a class="cases" id="cases">Cases</a>
+                <a class="home" id="home">{{{home}}}</a>
+                <a class="mision" id="mision">{{{mision}}}</a>
+                <a class="approach" id="approach">{{{approach}}}</a>
+                <a class="team" id="team">{{{team}}}</a>
+                <a class="cases" id="cases">{{{cases}}}</a>
             </nav>
         </div>
