--- a/templates/footer.handlebars
+++ b/templates/footer.handlebars
@@ -1,7 +1,7 @@
     <div class="footer">
         <div class="container_1">
             <div class="subtitle"><span>W - World</span>Consulting.</div>
-            <h3 class="text-footer">Wanna build something great together?<br>Let's talk</h3>
+            <h3 class="text-footer">{{{text_1}}}<br>{{{text_2}}}</h3>
         </div>
         <div class="container_2">
             <form action="" class="formulario">
