--- a/templates/nav.handlebars
+++ b/templates/nav.handlebars
@@ -13,10 +13,10 @@
         <div class="main_container">
             <h6 class="subtitle">W - World<span class="bold">Consulting.</span></h6>
             <nav class="main_nav" id="main_nav">
-                <a class="home" id="home">{{{home}}}</a>
-                <a class="mision" id="mision">{{{mision}}}</a>
-                <a class="approach" id="approach">{{{approach}}}</a>
-                <a class="team" id="team">{{{team}}}</a>
-                <a class="cases" id="cases">{{{cases}}}</a>
+                <a class="home" id="home" href="index.html">{{{home}}}</a>
+                <a class="mision" id="mision" href="mission.html">{{{mision}}}</a>
+                <a class="approach" id="approach" href="approach.html">{{{approach}}}</a>
+                <a class="team" id="team" href="team.html">{{{team}}}</a>
+                <a class="cases" id="cases" href="cases.html">{{{cases}}}</a>
             </nav>
         </div>
