--- a/templates/case.handlebars
+++ b/templates/case.handlebars
@@ -20,22 +20,24 @@
     <section class="infoNext">
         <div class="infoCase">
             <article>
-                <p class="bold">Cliente</p>
+                <p class="bold">{{{cliente}}}</p>
                 <a>{{{nextProyect}}}</a>
             </article>
             <article>
-                <p class="bold">Sector</p>
+                <p class="bold">{{{sector}}}</p>
                 <a>{{{sectorProyect}}}</a>
             </article>
         </div>
         <div class="logoContainer">
             <div class="logo">{{{logoProyect}}}</div>
+            <a href="{{{path}}}">
             <div class="nextCase">
                 <p>Siguiente Proyecto</p>
                 <svg width="90" height="55" viewBox="0 0 90 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M62.5821 0L59.8324 2.75551L82.3638 25.335H0V29.2399H82.7252L59.7853 52.2445L62.5349 55L90 27.4764L62.5821 0Z" fill="#4538DA"/>
                 </svg>
             </div>
+            </a>
         </div>
     </section>
 </body>
