--- a/templates/footer.handlebars
+++ b/templates/footer.handlebars
@@ -6,10 +6,10 @@
         <div class="container_2">
             <form action="" class="formulario">
                 <div class="input_container">
-                    <input type="text" name="nombre" id="nombre" placeholder="Nombre y Apellido">
-                    <input type="email" name="email" id="email" placeholder="Correo Electronico">
+                    <input type="text" name="nombre" id="nombre" placeholder="{{{name}}}">
+                    <input type="email" name="email" id="email" placeholder="{{{mail}}}">
                 </div>
-                <textarea name="" id="" cols="30" placeholder="Mensaje"></textarea>
+                <textarea name="" id="" cols="30" placeholder="{{{mensaje}}}"></textarea>
             </form>
         </div>
         <div class="redes-footer">
