--- a/templates/nav.handlebars
+++ b/templates/nav.handlebars
@@ -3,9 +3,9 @@
             <nav id="redes" class="redes">
                 <a class="ig" id="ig">instagram</a>
                 <a class="ld" id="ld">linkedin</a>
-                <select name="" id="language" class="language">
-                    <option value="eng">English</option>
-                    <option value="esp">Español</option>
+                <select name="" id="language" class="language" onchange="reloadPage()">
+                    <option value="es">Español</option>
+                    <option value="en">English</option>
                 </select>
             </nav>
         </div>
