--- a/templates/responsiveNav.handlebars
+++ b/templates/responsiveNav.handlebars
@@ -9,11 +9,11 @@
             </div>
             <div class="icon icon-apple"></div>
             <ul class="menu">
-                <li class="menu-item"><a href="index.html">Inicio</a></li>
-                <li class="menu-item"><a href="mission.html">Mision</a></li>
-                <li class="menu-item"><a href="approach.html">Enfoque</a></li>
-                <li class="menu-item"><a href="team.html">Equipo</a></li>
-                <li class="menu-item"><a href="cases.html">Proyectos</a></li>
+                <li class="menu-item"><a href="index.html">{{{home}}}</a></li>
+                <li class="menu-item"><a href="mission.html">{{{mision}}}</a></li>
+                <li class="menu-item"><a href="approach.html">{{{approach}}}</a></li>
+                <li class="menu-item"><a href="team.html">{{{team}}}</a></li>
+                <li class="menu-item"><a href="cases.html">{{{cases}}}</a></li>
                 <br>
                 <li class="menu-item">
                     <a href="">
