--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -43,7 +43,7 @@
         <div class="container_btn">
           <div class="readme">
             <div class="img">
-              <img src="img/mappingImg.png" alt="" />
+              <img src="img/mappingImg.svg" alt="" />
               <h4>
                   {{{readme_1_h4}}}
               </h4>
@@ -54,7 +54,7 @@
           </div>
           <div class="readme">
             <div class="img">
-            <img src="img/estrategiaImg.png" alt="" />
+            <img src="img/estrategiaImg.svg" alt="" />
             <h4>
                 {{{readme_2_h4}}}
             </h4>
@@ -65,7 +65,7 @@
           </div>
           <div class="readme">
             <div class="img">
-              <img src="img/ejecucionImg.png" alt="" />
+              <img src="img/ejecucionImg.svg" alt="" />
               <h4>
                 {{{readme_3_h4}}}
               </h4>
