--- a/templates/cases.handlebars
+++ b/templates/cases.handlebars
@@ -5,7 +5,7 @@
         <div class="container_btn">
           <div class="readme">
             <div class="img">
-              <img src="img/caseFlow1.png" alt="" />
+              <img src="img/caseFlow1.svg" alt="" />
               <h4>{{{readme_1_h4}}}</h4>
               <p>
                 {{{readme_1_p}}}
@@ -14,7 +14,7 @@
           </div>
           <div class="readme">
             <div class="img">
-              <img src="img/caseFlow2.png" alt="" />
+              <img src="img/caseFlow2.svg" alt="" />
               <h4>{{{readme_2_h4}}}</h4>
               <p>
                 {{{readme_2_p}}}
@@ -23,7 +23,7 @@
           </div>
           <div class="readme">
             <div class="img">
-              <img src="img/caseFlow3.png" alt="" />
+              <img src="img/caseFlow3.svg" alt="" />
               <h4>{{{readme_3_h4}}}</h4>
               <p>
                 {{{readme_3_p}}}
